--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ background-color: aliceblue;
 
   .galeria {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Tamaño más grande */
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 10px;
     padding: 20px;
 }
@@ -272,8 +272,8 @@ background-color: aliceblue;
 }
 
 #pie{
+    align-self: flex-end;
     color: aliceblue;
     padding: 20px;
-    font-size: 1rem;
-
+    font-size: 0.7rem;
 }
