--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
+/* CORRECCION:
+    Resetea margin y padding en el selector *,
+    se hace aquí para no teners que hacerlo en cada
+    selector al que se quiera aplicar.
+    Utiliza clases atómicas cuando puedas y agrupa selectores
+    según su funcionalidad, te ayudará a buscar errores y prevenirlos,
+    y facilitará el mantenimiento. Tienes muchos selectores que te reescriben
+    lo de otros y no encontrarás el fallo porques están muy alejados entre si.
+*/
 * {
     box-sizing: border-box;
 }
 
 body {
+    /* CORRECCION:
+        font-size lo damos con rem, no con px,
+        esto asegura que tenga un tamaño adeacuado para cada usuario.
+        agrupa las reglas por lo que hacen, bg-color seguido de bg-image por ej
+    */
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
@@ -43,7 +57,6 @@ body {
     border-radius: 5px;
 }
 
-
 .hamburguesa {
     display: none;
     flex-direction: column;
@@ -60,10 +73,17 @@ body {
     transition: all 3.0s ease;
 }
 
-
+/* 
+    CORRECCION:
+        + diseñamos siempre mobile first, es má fácil adaptar de pequeño
+        a grande que de grande a pequeño.
+        + flex-direction no puede funcionar si display no es flex.
+        + Estas reglas no se aplican porque las sobreescribes con el selector
+        #menulista, lo he subido para que lo veas
+*/
 @media (max-width: 768px) {
     .menu ul {
-        display: none;
+        display: flex;
         flex-direction: column;
         width: 100%;
         position: absolute;
@@ -72,12 +92,25 @@ body {
         background-color: #333;
         text-align: center;
     }
+    #menulista {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: #333;
+        text-align: center;
+        transition: all 0.5s ease; 
+        flex-direction: row;
+        justify-content: flex-start;
+        
+    }
 
+    #menulista.active {
+        display: flex;
+        opacity: 1;  
+    }
     .menu ul.active {
         display: flex;
     }
-
-   
 }
 
 .hamburguesa.active div:nth-child(1) {
@@ -90,24 +123,6 @@ body {
 
 .hamburguesa.active div:nth-child(3) {
     transform: rotate(-45deg) translate(5px, -5px); 
-}
-
-
-#menulista {
-    display: none;
-    flex-direction: column;
-    width: 100%;
-    background-color: #333;
-    text-align: center;
-    transition: all 0.5s ease; 
-    flex-direction: row;
-    justify-content: flex-start;
-    
-}
-
-#menulista.active {
-    display: flex;
-    opacity: 1;  
 }
 
 @media (max-width: 1920px) {
@@ -143,6 +158,11 @@ a:hover{
     color: aqua;
 }
 
+/*
+CORRECCION:
+utiliza medidas relativas, en pantalla movil esto se ve mal,
+y queda más limpio => padding: 0 <medida>; 
+*/
 p {
     color: white;
     display: flex;
@@ -228,7 +248,7 @@ background-color: aliceblue;
       font-size: 1rem;
     }
     .contenido {
-      flex-direction: column; 
+      flex-direction: column; /* esto te da problemas con el <a> de index.html*/
       align-items: center;
     }
   }
